name: stackage-multibuild
version: 0.1.0.0
synopsis: Build a package against different stackage snapshots.
license: BSD3
author: Daniel Díaz
maintainer: dhelta.diaz@gmail.com
category: Stackage
build-type: Simple
cabal-version: >=1.10

executable stackage-multibuild
  main-is: Main.hs
  build-depends:
      base >= 4.8
    , directory >= 1.2.5.0
    , text
    , parsec
    , process
    , transformers
    , containers
  default-language: Haskell2010
  ghc-options: -Wall
